Modify passenger gui